Día 1: inicio del proyecto de memes

--- a/generador-memes/src/app/lista-memes/lista-memes.component.html
+++ b/generador-memes/src/app/lista-memes/lista-memes.component.html
@@ -1,1 +1,5 @@
-<p>lista-memes works!</p>
+<div class="meme">
+  <p class="arriba">aaa</p>
+  <img src="https://i.blogs.es/d86db0/meme-fry-1/450_1000.jpg" alt="">
+  <p class="abajo">bbb</p>
+</div>
