--- a/ejemplos-angular/src/app/app.component.html
+++ b/ejemplos-angular/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>Curso de Angular</h1>
 
 <!-- <app-cmp01-data-binding></app-cmp01-data-binding> -->
-<app-cmp02-directivas></app-cmp02-directivas>
+<!-- <app-cmp02-directivas></app-cmp02-directivas> -->
+<!-- <app-cmp03-input-y-output></app-cmp03-input-y-output> -->
+<app-cmp04-pipes></app-cmp04-pipes>
