--- a/generador-memes/src/app/lista-memes/lista-memes.component.html
+++ b/generador-memes/src/app/lista-memes/lista-memes.component.html
@@ -1,5 +1,7 @@
-<div class="meme">
-  <p class="arriba">aaa</p>
-  <img src="https://i.blogs.es/d86db0/meme-fry-1/450_1000.jpg" alt="">
-  <p class="abajo">bbb</p>
-</div>
+<ng-container *ngIf="memes.length > 0; else noHayMemes">
+  <app-meme *ngFor="let memeObj of memes" [meme]="memeObj"></app-meme>
+</ng-container>
+
+<ng-template #noHayMemes>
+  <p>No hay ningún meme todavía...</p>
+</ng-template>
