Día 3: @ViewChild y formularios

--- a/ejemplos-angular/src/app/app.component.html
+++ b/ejemplos-angular/src/app/app.component.html
@@ -4,4 +4,5 @@
 <!-- <app-cmp02-directivas></app-cmp02-directivas> -->
 <!-- <app-cmp03-input-y-output></app-cmp03-input-y-output> -->
 <!-- <app-cmp04-pipes></app-cmp04-pipes> -->
-<app-cmp05-referencias></app-cmp05-referencias>
+<!-- <app-cmp05-referencias></app-cmp05-referencias> -->
+<app-cmp07-formularios></app-cmp07-formularios>
