--- a/ejemplos-angular/src/app/cmp05-referencias/cmp05-referencias.component.html
+++ b/ejemplos-angular/src/app/cmp05-referencias/cmp05-referencias.component.html
@@ -1,15 +1,21 @@
 <h2>Referencias</h2>
 
-<video src="assets/video.mp4" width="200" #video1></video>
-<button *ngIf="video1.paused; else btnPause" type="button" (click)="play(video1)">Play</button>
 
-<ng-template #btnPause>
-  <button type="button" (click)="pause(video1)">Pause</button>
-</ng-template>
 
-<button type="button" (click)="setFullscreen(video1)">Fullscreen</button>
-<input type="range" [value]="video1.volume * 100" (input)="cambiarVolumen(video1, $event)">
+<app-modal>
+  <video src="assets/video.mp4" width="200" #video1></video>
+  <button *ngIf="video1.paused || video1.ended; else btnPause" type="button" (click)="play(video1)">Play</button>
 
-<app-modal></app-modal>
+  <ng-template #btnPause>
+    <button type="button" (click)="pause(video1)">Pause</button>
+  </ng-template>
 
-<button>Mostrar video</button>
+  <button type="button" (click)="setFullscreen(video1)">Fullscreen</button>
+  <input type="range" [value]="video1.volume * 100" (input)="cambiarVolumen(video1, $event)">
+</app-modal>
+
+<app-modal #modal2>
+  <p>aaa</p>
+</app-modal>
+
+<button type="button" (click)="muestraVideo()">Mostrar video</button>
