--- a/ejemplos-angular/src/app/cmp05-referencias/modal/modal.component.html
+++ b/ejemplos-angular/src/app/cmp05-referencias/modal/modal.component.html
@@ -4,6 +4,6 @@
     <button type="button" (click)="cerrarModal()">X</button>
   </div>
   <div class="modal-content">
-    <p>Aquí va el contenido</p>
+    <ng-content></ng-content>
   </div>
 </div>
