--- a/ejemplos-angular/src/app/app.component.html
+++ b/ejemplos-angular/src/app/app.component.html
@@ -5,4 +5,6 @@
 <!-- <app-cmp03-input-y-output></app-cmp03-input-y-output> -->
 <!-- <app-cmp04-pipes></app-cmp04-pipes> -->
 <!-- <app-cmp05-referencias></app-cmp05-referencias> -->
+<!-- <app-cmp06-servicios></app-cmp06-servicios> -->
 <app-cmp07-formularios></app-cmp07-formularios>
+<!-- <app-cmp08-observables></app-cmp08-observables> -->
