Día 4: tipos en las peticiones http

--- a/ejemplos-angular/src/app/cmp09-http/cmp09-http.component.html
+++ b/ejemplos-angular/src/app/cmp09-http/cmp09-http.component.html
@@ -1,4 +1,5 @@
 <h2>Http</h2>
+<p>Usuario logueado: {{nombre}}</p>
 
 <app-reactivo *ngIf="mostrarRegistro"></app-reactivo>
 <app-plantilla *ngIf="mostrarLogin"></app-plantilla>
