Día 5: routing y ejemplo de memes

--- a/generador-memes/src/app/app.component.html
+++ b/generador-memes/src/app/app.component.html
@@ -1,2 +1,8 @@
 <h1>Generador de memes</h1>
-<app-lista-memes></app-lista-memes>
+
+<nav>
+  <a routerLink="/memes">Listado de memes</a>
+  <a routerLink="/nuevo-meme">Crear un nuevo meme</a>
+</nav>
+
+<router-outlet></router-outlet>
